fix : resolve alignment issues

--- a/frontend/src/app/components/product-card/product-card.css
+++ b/frontend/src/app/components/product-card/product-card.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     height: 330px;
-    width: 240px;
+    width: 227px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
